// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders markup with two items 1`] = `
<ng-ais-breadcrumb
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Breadcrumb"
  >
    
        
    
    <div
      class="ais-Breadcrumb-body ais-body"
    >
      
          
      <ul
        class="ais-Breadcrumb-list"
      >
        
            
        
        <li
          class="ais-Breadcrumb-item"
        >
          
              
              
          
          <a
            class="ais-Breadcrumb-link"
            href=""
          >
            
                foo
              
          </a>
          
            
        </li>
        <li
          aria-hidden="true"
          class="ais-Breadcrumb-item"
        >
          
              &gt;
              
          
          
            
        </li>
        <li
          class="ais-Breadcrumb-item"
        >
          
              
              
          
          <a
            class="ais-Breadcrumb-link"
            href=""
          >
            
                bar
              
          </a>
          
            
        </li>
        
          
      </ul>
      
        
    </div>
    
      
  </div>
    
</ng-ais-breadcrumb>
`;

exports[`Breadcrumb renders markup without state 1`] = `
<ng-ais-breadcrumb
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Breadcrumb"
  >
    
        
    
    <div
      class="ais-Breadcrumb-body ais-body"
    >
      
          
      <ul
        class="ais-Breadcrumb-list"
      >
        
            
        
        
          
      </ul>
      
        
    </div>
    
      
  </div>
    
</ng-ais-breadcrumb>
`;

exports[`Breadcrumb should be hidden with \`autoHideContainer\` 1`] = `
<ng-ais-breadcrumb
  autoHideContainer={[Function Boolean]}
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Breadcrumb"
  >
    
        
    
    
      
  </div>
    
</ng-ais-breadcrumb>
`;

exports[`Breadcrumb should display an header and a footer 1`] = `
<ng-ais-breadcrumb
  cx={[Function Function]}
  footer={[Function String]}
  header={[Function String]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Breadcrumb"
  >
    
        
    
    <div
      class="ais-Breadcrumb-body ais-body"
    >
      
          
      <ul
        class="ais-Breadcrumb-list"
      >
        
            
        
        
          
      </ul>
      
        
    </div>
    
      
  </div>
    
</ng-ais-breadcrumb>
`;
